# engine-game-factions

./: .gitignore  .gitignore.swp
src/4ha6EW2cru.Renderer/: 4ha6EW2cru.Renderer.tmp_Release_Win32.vcproj  4ha6EW2cru.Renderer.vcproj  BadArchive.cpp  BadArchive.h  BadArchiveFactory.cpp  BadArchiveFactory.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  FPSCameraComponent.cpp  FPSCameraComponent.h  IRenderSystemScene.h  IRendererSystem.hpp  IRendererSystemComponent.hpp  Line3d.cpp  Line3d.h  LineFactory.cpp  LineFactory.h  Makefile  OgreLogListener.cpp  OgreLogListener.h  RendererSystem.cpp  RendererSystem.h  RendererSystemComponent.cpp  RendererSystemComponent.h  RendererSystemScene.cpp  RendererSystemScene.h  SystemDefinition.cxx  precompiled.h
src/4ha6EW2cru.Renderer/OgreMax/: OgreMaxModel.cpp  OgreMaxModel.hpp  OgreMaxPlatform.hpp  OgreMaxRenderWindowIterator.hpp  OgreMaxScene.cpp  OgreMaxScene.hpp  OgreMaxTypes.hpp  OgreMaxUtilities.cpp  OgreMaxUtilities.hpp  ProgressCalculator.cpp  ProgressCalculator.hpp  Version.cpp  Version.hpp
src/4ha6EW2cru.System/: 4ha6EW2cru.System.vcproj  CMakeLists.txt  Export.hpp  Makefile  cmake_install.cmake  precompiled.h
src/4ha6EW2cru.System.Tests/: 4ha6EW2cru.System.Tests.vcproj  CMakeLists.txt  Makefile  TestEnvironment.hpp  main.cpp
src/4ha6EW2cru.System.Tests/Debug/: BuildLog.htm  mt.dep
src/4ha6EW2cru.System.Tests/Events/: specs_for_EventManager.cxx
src/4ha6EW2cru.System.Tests/Game/: specs_for_Game.cxx
src/4ha6EW2cru.System.Tests/IO/: MemoryStream_Tests.cxx  Win32PathInformation_Tests.cxx  specs_for_ResourceCache.cxx
src/4ha6EW2cru.System.Tests/Maths/: MathVector3_Tests.cxx
src/4ha6EW2cru.System.Tests/Mocks/: MockConfiguration.hpp  MockEntity.hpp  MockEntityFactory.hpp  MockEntityService.hpp  MockEventListener.hpp  MockEventManager.hpp  MockFileSystem.hpp  MockInstrumentation.hpp  MockPlatformManager.hpp  MockProgramOptions.hpp  MockResourceCache.hpp  MockSerializer.hpp  MockService.hpp  MockServiceManager.hpp  MockStream.h  MockSystemComponent.hpp  MockSystemManager.hpp  MockSystemScene.hpp  MockWorld.hpp
src/4ha6EW2cru.System.Tests/Release/: BuildLog.htm  mt.dep
src/4ha6EW2cru.System.Tests/State/: ._EntityService_Tests.cxx  EntityService_Tests.cxx  WorldEntity_Tests.cxx  World_Tests.cxx
src/4ha6EW2cru.System.Tests/System/: specs_for_SystemManager.cxx
src/4ha6EW2cru.System.Tests/System/platform/: OSXPlatform_spec.cxx
src/4ha6EW2cru.System.Tests/Utility/: StringUtils_Tests.cxx
src/4ha6EW2cru.System/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  Application_postBuildPhase.makeDebug  Base_postBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make
src/4ha6EW2cru.System/Configuration/: Configuration.cpp  Configuration.h  ConfigurationFile.cpp  ConfigurationFile.h  ConfigurationTypes.hpp  IConfiguration.hpp  IConfigurationFile.hpp
src/4ha6EW2cru.System/Events/: Event.h  EventData.hpp  EventListener.h  EventManager.cpp  EventManager.h  EventType.hpp  IEvent.hpp  IEventData.hpp  IEventListener.hpp  IEventManager.hpp  InputEventData.hpp  ScriptEvent.hpp
src/4ha6EW2cru.System/Exceptions/: AlreadyInitializedException.hpp  FileNotFoundException.hpp  FileWriteException.hpp  IntializeFailedException.hpp  NullReferenceException.hpp  OutOfRangeException.hpp  ScreenDimensionsException.hpp  ScriptException.hpp  UnInitializedException.hpp
src/4ha6EW2cru.System/Game/: Game.cpp  Game.h  GameFactory.cpp  GameFactory.h  IGame.hpp  IGameFactory.hpp
src/4ha6EW2cru.System/IO/: FileBuffer.hpp  FileSearchResult.hpp  FileSystem.cpp  FileSystem.h  IFileSystem.hpp  IMemoryStream.hpp  IPathInformation.hpp  IResource.hpp  IResourceCache.hpp  IStream.hpp  MemoryStream.cpp  MemoryStream.h  OSXPathInformation.cpp  OSXPathInformation.h  Resource.h  ResourceCache.cpp  ResourceCache.h  Win32PathInformation.cpp  Win32PathInformation.h
src/4ha6EW2cru.System/Logging/: LogLevel.hpp  Logger.cpp  Logger.h
src/4ha6EW2cru.System/Management/: Management.cpp  Management.h
src/4ha6EW2cru.System/Maths/: MathMatrix.cpp  MathMatrix.h  MathQuaternion.hpp  MathTools.hpp  MathUnits.hpp  MathVector3.hpp
src/4ha6EW2cru.System/Platform/: IClock.hpp  IPlatformManager.h  IProgramOptions.hpp  OSXClock.cpp  OSXClock.h  OSXPlatformManager.cpp  OSXPlatformManager.h  ProgramOptions.cpp  ProgramOptions.h  Win32Clock.cpp  Win32Clock.h  Win32PlatformManager.cpp  Win32PlatformManager.h
src/4ha6EW2cru.System/Project.xcodeproj/: NK.mode2v3  NK.pbxuser  project.pbxproj
src/4ha6EW2cru.System/Service/: IService.hpp  IServiceManager.h  ServiceManager.cpp  ServiceManager.h
src/4ha6EW2cru.System/State/: EntityService.cpp  EntityService.h  IEntityService.hpp  IWorld.hpp  IWorldEntity.hpp  IWorldEntityFactory.hpp  World.cpp  World.h  WorldEntity.cpp  WorldEntity.h  WorldEntityFactory.cpp  WorldEntityFactory.h
src/4ha6EW2cru.System/State/Serilaization/: AIComponentSerializer.cpp  AIComponentSerializer.h  AnimationComponentSerializer.cpp  AnimationComponentSerializer.h  ComponentSerializerFactory.cpp  ComponentSerializerFactory.h  GeometryComponentSerializer.cpp  GeometryComponentSerializer.h  GraphicsComponentSerializer.cpp  GraphicsComponentSerializer.h  IComponentSerializer.hpp  IWorldLoader.hpp  InputComponentSerializer.cpp  InputComponentSerializer.h  NetworkComponentSerializer.cpp  NetworkComponentSerializer.h  (+8 more)
src/4ha6EW2cru.System/System/: AnyType.hpp  IInstrumentation.hpp  ILibrary.hpp  IObserver.hpp  ISerializable.hpp  ISubject.hpp  ISystem.hpp  ISystemComponent.hpp  ISystemManager.hpp  ISystemScene.hpp  Instrumentation.hpp  Memory.cxx  SystemExports.hpp  SystemManager.cpp  SystemManager.h  SystemPrerequisites.hpp  SystemType.hpp  SystemTypeMapper.hpp
src/4ha6EW2cru.System/Utility/: ConvertUTF.h  SearchUtility.hpp  SimpleIni.h  StringUtils.cpp  StringUtils.h
src/Null/: CMakeLists.txt  Makefile  NullSystem.hpp  SystemDefinition.cxx  SystemDefinition.def
(+1566 files in other folders)
