CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (PROJECT_BINARY_DIR ../../build/bin)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}) 
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}) 

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../4ha6EW2cru.Testing)
INCLUDE_DIRECTORIES(../4ha6EW2cru.System)
INCLUDE_DIRECTORIES(../../etc/vendor/gtest/include)

IF(APPLE)
   SET(CMAKE_OSX_ARCHITECTURES i386)
ENDIF (APPLE)

FIND_LIBRARY(GTEST_LIBRARY gtest PATHS ../../etc/vendor/gtest)
FIND_LIBRARY(GTEST_LIBRARY gtest PATHS ../../etc/vendor/gtest)

FIND_LIBRARY(BASE_LIBRARY Base PATHS ../../build/bin)

ADD_EXECUTABLE (BaseTests 
    System/platform/OSXPlatform_spec.cxx
  
  main.cpp)
TARGET_LINK_LIBRARIES (BaseTests ${GTEST_LIBRARY} ${BASE_LIBRARY})