CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (PROJECT_BINARY_DIR ../../build/bin)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}) 
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}) 

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../4ha6EW2cru.System)
INCLUDE_DIRECTORIES(../../../boost-trunk)

FIND_LIBRARY(BOOST_LIBRARY boost_filesystem PATHS ../../../boost-trunk/stage/lib)

IF(APPLE)
   SET(CMAKE_OSX_ARCHITECTURES i386)
ENDIF (APPLE)

FIND_LIBRARY(BASE_LIBRARY Base PATHS ../../build/bin)

ADD_LIBRARY (Null SHARED
  SystemDefinition.cxx
  NullSystem.hpp
  )
TARGET_LINK_LIBRARIES (Null ${BASE_LIBRARY})